# PythonProject

./: .flake8  .gitignore.py  README.md  pyproject.toml
src/: mask.py  processing.py  widget.py
