[tool.poetry]
name = "banking-masker"
version = "0.1.0"
description = "Маскировка номеров карт и счетов"
authors = ["leva_zet@mail.ru"]

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^8.4.2"
flake8 = "^7.3.0"
mypy = "^1.18.2"
black = "^25.9.0"
isort = "^6.1.0"

[tool.poetry.scripts]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/\.git/
'''

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'